# bazel-ros2-registry

modules/ament_cmake/humble/: MODULE.bazel  presubmit.yml  source.json
modules/ament_cmake/humble/patches/: add_build_file.patch
modules/common_interfaces/humble/: MODULE.bazel  presubmit.yml  source.json
modules/common_interfaces/humble/patches/: add_build_file.patch
modules/rcl_interfaces/humble/: MODULE.bazel  presubmit.yml  source.json
modules/rcl_interfaces/humble/patches/: add_build_file.patch
modules/test_interface_files/humble/: MODULE.bazel  presubmit.yml  source.json
modules/test_interface_files/humble/patches/: add_build_file.patch
modules/unique_identifier_msgs/: metadata.json
modules/unique_identifier_msgs/humble/: MODULE.bazel  presubmit.yml  source.json
modules/unique_identifier_msgs/humble/patches/: add_build_file.patch
