module(
    name = "common_interfaces",
    version = "humble",
    compatibility_level = 1,
)
bazel_dep(name = "rcl_interfaces", version = "humble")
bazel_dep(name = "rcl_interfaces", version = "humble")
bazel_dep(name = "rcl_interfaces", version = "humble")
bazel_dep(name = "rcl_interfaces", version = "humble")
bazel_dep(name = "rcl_interfaces", version = "humble")
bazel_dep(name = "rcl_interfaces", version = "humble")
bazel_dep(name = "rcl_interfaces", version = "humble")
bazel_dep(name = "rcl_interfaces", version = "humble")
